<resources>

    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Muzic Playa</string>

    <!-- Category name for Main Page [CHAR LIMIT=20] -->

    <string name="title">Song Title  </string>

    <string name="artist">Artist </string>

    <string name="album">Album </string>

    <string name="start_time">00:00</string>

    <string name="end_time">00:00</string>
    <string name="title_activity_song_list">Song List</string>


    <!-- Category name for Button [CHAR LIMIT=20] -->
    <string name="Previous">Previous</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="library">Library</string>
    <string name="random">Random</string>
    <string name="repeat">Repeat</string>


    <string name="status">Select a Song ...</string>

</resources>



